# garp-bc

./: .dockerignore  .env.example  .gitignore  BRIDGE_TESTING_IMPROVEMENTS.md  COMPLETE_ENHANCEMENT_SUMMARY.md  COMPLETE_FILE_INVENTORY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPER_QUICK_REFERENCE.md  DOCUMENTATION_OVERVIEW.md  GARP_BLOCKCHAIN_DOCUMENTATION.md  IMPROVEMENTS_SUMMARY.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  RECENT_UPDATES_SUMMARY.md  SESSION_SUMMARY.md  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  run_tests.ps1  run_tests.sh  validate_tests.sh
.github/workflows/: cd.yml  ci-cd.yml  ci-go.yml  ci-rust.yml  docs.yml
api-gateway-go/: Dockerfile  go.mod  go.sum
api-gateway-go/cmd/server/: main.go
api-gateway-go/internal/auth/: middleware.go
api-gateway-go/internal/config/: config.go
api-gateway-go/internal/routes/: routes.go
api-gateway-go/internal/services/: proxy.go
backend-go/: Dockerfile  go.mod  go.sum
backend-go/cmd/participant/: main.go
backend-go/internal/client/: participant.go  synchronizer.go
backend-go/internal/config/: config.go
backend-go/internal/integration/: cloud_integration.go  db_integration.go  enterprise_integration.go  sqlite_driver.go
backend-go/internal/middleware/: headers.go  metrics.go  security.go
backend-go/internal/otel/: tracing.go
backend-go/internal/state/: state.go
backend-go/internal/storage/: messages.go  migrations.go  storage.go
backend-go/migrations/: 001_init.sql  002_messages.sql
common/: Cargo.toml
common/src/: consensus.rs  consensus_manager.rs  consensus_test.rs  crypto.rs  error.rs  lib.rs  network.rs  timing.rs  types.rs  validator.rs
docs/: chat-api.md  vps-deploy.md
frontend/: 404.html  Dockerfile  README.md  app.js  contact.html  feature.html  index.html  nginx.conf  styles.css  test.html
frontend/css/: main.min.css  plugins.min.css
frontend/css/loaders/: loader.min.css
frontend/docs/: .htmlhintrc  enhancements.js  index.html  schema.js  script.js  styles.css
frontend/docs/json-rpc/: getBalance.html  getBlock.html  getSlotLeader.html  sendTransaction.html  simulateTransaction.html
frontend/js/: app.min.js  libs.min.js
global-synchronizer/: Cargo.toml  Dockerfile  README.md  build.rs
global-synchronizer/config/: global-sync.toml
global-synchronizer/proto/: garp.proto
global-synchronizer/scripts/: run-local-cluster.ps1
global-synchronizer/src/: api.rs  bridge.rs  config.rs  consensus.rs  consensus_example.rs  cross_domain.rs  grpc.rs  lib.rs  main.rs  network.rs  security.rs  settlement.rs  storage.rs  synchronizer.rs  validator.rs
global-synchronizer/src/bridge/: bsc.rs  ethereum.rs  liquidity.rs  oracle.rs  polygon.rs  solana.rs  wallet.rs
global-synchronizer/src/bridge/tests/: ethereum_tests.rs  liquidity_tests.rs  oracle_tests.rs  wallet_tests.rs
global-synchronizer/tests/: bridge_integration_tests.rs
k8s/: api-deployment.yaml  backend-deployment.yaml  frontend-deployment.yaml  hpa.yaml
participant-node/: Cargo.toml  Dockerfile  config.toml
participant-node/benches/: privacy_engine_benchmarks.rs
participant-node/docs/: contract_debugging_framework.md  contract_testing_framework.md
participant-node/examples/: advanced_contract_debugging.rs  advanced_contract_testing.rs  contract_debugging_example.rs  contract_testing_example.rs
participant-node/scripts/: run_tests.ps1
participant-node/src/: api.rs  block_builder.rs  config.rs  consensus.rs  contract_compiler.rs  contract_debug.rs  contract_engine.rs  contract_state.rs  contract_stdlib.rs  contract_testing.rs  eth_compatibility.rs  ledger.rs  lib.rs  main.rs  mempool.rs  merkle.rs  network_layer.rs  node.rs  poh.rs  privacy_dsl.rs  privacy_engine.rs  private_state.rs  private_transactions.rs  secure_execution.rs  state_commitments.rs  storage.rs  wallet.rs  wasm_runtime.rs  zk_system.rs
participant-node/tests/: README.md  integration_tests.rs  privacy_engine_tests.rs  test_config.rs
scripts/: compose-upgrade.sh  db-backup.sh  db-restore.sh  deploy-vps.sh  dev-setup-linux.sh  dev-setup-windows.ps1  vuln-scan.sh
sdk-go/: README.md  go.mod
sdk-go/garp/: chat.go  client.go
sdk-js/: README.md  package.json  tsconfig.json
sdk-js/src/: client.ts  types.ts
sdk-py/: README.md  pyproject.toml
sdk-py/garp_sdk/: __init__.py  chat.py  client.py  types.py
sdk-rs/: Cargo.toml  README.md
sdk-rs/src/: lib.rs
sync-domain/: Cargo.toml  Dockerfile  sync-domain.toml
sync-domain/src/: config.rs  consensus.rs  domain.rs  kafka.rs  lib.rs  main.rs  mediator.rs  sequencer.rs  storage.rs  vector_clock.rs
