[workspace]
members = [
    "participant-node",
    "sync-domain", 
    "global-synchronizer",
    "common",
    
]
resolver = "2"

[workspace.dependencies]
# Cryptography
ring = "0.17"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"

# Networking
tonic = "0.11"
prost = "0.12"
hyper = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Message Queue
rdkafka = { version = "0.36", features = ["cmake-build"] }
lapin = "2.3"

# Consensus & Distributed Systems
raft = "0.7"
etcd-rs = "1.0"

# Serialization
bincode = "1.3"
postcard = "1.0"

# Async & Concurrency
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Monitoring
prometheus = "0.13"
metrics = "0.22"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true