[package]
name = "garp-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
ring = "0.17"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"
bincode = "1.3"
async-trait = "0.1"
tracing = "0.1"