[package]
name = "global-synchronizer"
version = "0.1.0"
edition = "2021"
authors = ["GARP Team"]
description = "Global Synchronizer for cross-domain atomic settlement with BFT consensus"
license = "MIT"
build = "build.rs"

[dependencies]
# Common utilities
garp-common = { path = "../common" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Message queues
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
lapin = "2.0"

# Networking
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = { version = "1.0", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
hex = "0.4"
blake3 = "1.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# BFT Consensus
raft = "0.7"
etcd-rs = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "5.0"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-prometheus = "0.6"

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"

# Network discovery
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad"] }

# Cross-domain coordination
crossbeam = "0.8"
crossbeam-channel = "0.5"

# State machine
state_machine_future = "0.2"

# Consensus algorithms
tendermint = { version = "0.34", optional = true }
hotstuff = { version = "0.0.0", optional = true }

# Load balancing
tower-load-shed = "0.1"
tower-limit = "0.3"

# Compression
lz4 = "1.24"
zstd = "0.13"

# Memory management
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"

[features]
default = ["bft-raft"]
bft-raft = []
bft-tendermint = ["tendermint"]
bft-hotstuff = ["hotstuff"]

[[bin]]
name = "global-synchronizer"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.11"