[package]
name = "garp-participant-node"
version = "0.1.0"
edition = "2021"

[dependencies]
garp-common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# API
axum = "0.7"
tower = "0.4"
hyper = { version = "1.0", features = ["full"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Cryptography
ring = "0.17"
ed25519-dalek = "2.0"

# Serialization
bincode = "1.3"
base64 = "0.21"

# Concurrency
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Test utilities
tempfile = "3.0"
wiremock = "0.5"
mockall = "0.11"
serial_test = "3.0"

# Performance testing
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "privacy_engine_benchmarks"
harness = false