[package]
name = "garp-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for GARP participant-node JSON-RPC"
license = "UNLICENSED"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1"